# navega-o-reativa

bug_algorithms_pkg/: package.xml  setup.cfg  setup.py
bug_algorithms_pkg/bug_algorithms_pkg/: bug1_node.py  tangent_bug_node.py
my_robot_launch_files/: package.xml  setup.cfg  setup.py
my_robot_launch_files/launch/: launch_bug1.launch.py  launch_bug_world.launch.py
my_worlds/: package.xml  setup.cfg  setup.py
my_worlds/worlds/: bridge_config.yaml  new_bug_world.sdf
