<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_worlds</name>
  <version>0.0.0</version>
  <description>Package containing custom Gazebo world files</description>
  <maintainer email="seu_email@example.com">seu_nome</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>